# coccoc-tokenizer

./: .clang-format  .gitignore  CMakeLists.txt  CMakeMacro.cmake  README.md  RELEASE.md
debian/: changelog  coccoc-tokenizer-java.install  coccoc-tokenizer.install  control  files  rules
dicts/tokenizer/: Freq2NontoneUniFile  acronyms  chemical_comp  keyword.freq  special_token.strong  special_token.weak
dicts/vn_lang_tool/: alphabetic  d_and_gi.txt  i_and_y.txt  numeric
golang/: token.go  tokenizer.cpp  tokenizer.go  tokenizer.h  unsafe.go
java/: build_java.sh
java/src/java/: Token.java  Tokenizer.java
java/src/jni/: Tokenizer.cpp
python/: CocCocTokenizer.pyx  build_python.sh  setup.py
tests/: test.cpp  vn_lang_tool_test.cpp
tokenizer/: config.h.in  helper.hpp  token.hpp  tokenizer.hpp
tokenizer/auxiliary/: buffered_reader.hpp  file_serializer.hpp  trie.hpp  utf8.h  vn_lang_tool.hpp
tokenizer/auxiliary/sparsepp/: spp.h  spp_config.h  spp_dlalloc.h  spp_memory.h  spp_smartptr.h  spp_stdint.h  spp_timer.h  spp_traits.h  spp_utils.h
tokenizer/auxiliary/trie/: da_trie.hpp  da_trie_node.hpp  hash_trie.hpp  hash_trie_node.hpp  multiterm_da_trie.hpp  multiterm_da_trie_node.hpp  multiterm_hash_trie.hpp  multiterm_hash_trie_node.hpp  string_set_trie.hpp  syllable_da_trie.hpp  syllable_da_trie_node.hpp  syllable_hash_trie.hpp  syllable_hash_trie_node.hpp
tokenizer/auxiliary/tsl/: LICENSE  robin_growth_policy.h  robin_hash.h  robin_map.h  robin_set.h
tokenizer/auxiliary/utf8/: checked.h  core.h  unchecked.h
utils/: dict_compiler.cpp  tokenizer.cpp  vn_lang_tool.cpp
